tests/errors/semantic/blocking/LIST_COMPREHENSION_VARIABLE_REUSE.py
# pylint: disable=missing-function-docstring, missing-module-docstring
a = [a for a in range(10)]